# softshell

./: .sfshrc.lua  Cargo.toml  README.md  softhostname.lua
src/: main.rs
